# EdgeLab

./: .gitignore  CMakeLists.txt  README.MD  build_setup.sh  setup_cmake.sh
.github/workflows/: cmake.yml
benchmark/: README.md  bfs_threaded_benchmark.cpp  generation_benchmark.cpp  iteration_benchmark.cpp  run_algorithm_benchmarks.py  run_micro_benchmarks.py  run_micro_benchmarks.sh  tc_threaded_benchmark.cpp
examples/: breadth_first_search.cpp  breadth_first_search.h  generate_and_print.cpp  triangle_counting.cpp  triangle_counting.h
examples_opencl/: breadth_first_search.cpp  breadth_first_search.h  breadth_first_search_opencl.cpp  triangle_counting.cpp  triangle_counting.h  triangle_counting_opencl.cpp
examples_threaded/: breadth_first_search.cpp  breadth_first_search.h  triangle_counting.cpp  triangle_counting.h
graphs/: mini.el  mini.elab  mini.graph  mini.txt  mini.vel  mini.vwel  mini.wel  mini_d.el  mini_d.elab  mini_d.vel  mini_d.vwel  mini_d.wel  mini_dv.elab  mini_dvw.elab  mini_dw.elab  mini_v.cg  mini_v.elab  mini_v.graph  mini_vw.cg  mini_vw.graph  mini_w.cg  mini_w.elab  mini_w.graph
kernels/: bfs.cl  triangle_counting.cl
src/: builder.h  cli.h  cli_dispatch.h  converter.cpp  debug.h  generator.h  graph.cpp  graph.h  graph_comp.h  graph_core.h  graph_maker.h  graph_pch.h  graph_test.h  graph_test_opencl.h  loader.h  opencl_wrapper.cpp  opencl_wrapper.h  saver.h  thread_safe.h  type_promoter.h  util.cpp  util.h
src/loader/: compacted_graph_loader.h  edge_list_loader.h  loader_base.h  loader_base_impl.h  loader_factory.h  loader_factory_impl.h  metis_graph_loader.h
test/: breadth_first_search_test.cpp  generate_and_print.cpp  iteration.cpp  print.cpp  test.cpp  test_load_save.cpp  test_load_save.ps1  test_load_save.py  test_load_save.sh  triangle_counting_test.cpp  validate_graph.cpp  verify_undirected.cpp  vertex_edge_packing.cpp
